# yfinance-mcp

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  get_token.sh  pyproject.toml
src/finance_mcp_server/: __init__.py  __main__.py  app.py  config.py  main.py
src/finance_mcp_server/mcp_servers/: stock.py
src/finance_mcp_server/middleware/: auth.py
src/finance_mcp_server/misc/: __init__.py  art.py
src/finance_mcp_server/routes/: ops.py
tests/: conftest.py  test_auth_middleware.py  test_config.py  test_routes.py  test_stock_tools.py
